got some issues with overlapping content, should be fixed

--- a/src/styles/sass/partials/_header.scss
+++ b/src/styles/sass/partials/_header.scss
@@ -1,7 +1,3 @@
-header {
-  height: 110vh
-}
-
 h1 {
   padding-top: 25px;
   margin-top: 0;
