--- a/styles/App.css
+++ b/styles/App.css
@@ -270,10 +270,6 @@ button:focus {
   transition: 0.5s;
 }
 
-header {
-  height: 110vh;
-}
-
 h1 {
   padding-top: 25px;
   margin-top: 0;
